test/tests/stages/14_pointers/invalid_types/extra_credit/switch_on_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  switch
  (
  identifier(x)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(1)
  ;
  }
  }
